--- a/user-backend/src/main/resources/application-dev.yml
+++ b/user-backend/src/main/resources/application-dev.yml
@@ -1,7 +1,8 @@
 server:
     port: 9089
     servlet:
-    context-path: /user/api
+      contextPath: /user/api
+      
 spring:
     application:
         name: User Microservice in Development Environment
