added user pasword hasshing for strong password

--- a/user-backend/src/main/resources/application.yml
+++ b/user-backend/src/main/resources/application.yml
@@ -29,5 +29,15 @@ logging:
   #  web:
    #   exposure:
     #    include:
-     #   - '*'   
-        
+     #   - '*'
+     
+password:
+  hashing:
+    algo:
+      argon2:
+         type: 1
+         saltLength:   16
+         hashLength:   32
+         iterations:   4
+         memory:       65586
+         parralellism: 2
